kubernetes/apps/network/traefik/test/ks.yaml
---
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: traefik-test
  namespace: flux-system
spec:
  interval: 1h
  path: ./kubernetes/apps/network/traefik/test
  prune: true
  sourceRef:
    kind: GitRepository
    name: flux-system
    namespace: flux-system
  dependsOn:
    - name: traefik-gateway
      namespace: network
    - name: traefik-middleware
      namespace: network
  wait: true
  timeout: 5m
