kubernetes/apps/network/traefik/test/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: network
resources:
  - test-httproute.yaml
