kubernetes/apps/network/traefik/test/test-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-test
  namespace: network
spec:
  hostnames:
    - traefik-test.68cc.io
  parentRefs:
    - name: traefik
      namespace: network
      sectionName: websecure
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: compression
      backendRefs:
        - name: grafana
          namespace: monitoring
          port: 3000
